Fixed stretched image.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 .pink-bold {
     font-weight: bold;
     color: #ff69b4; 
@@ -62,6 +63,14 @@
     margin-left: 100px;
     margin-top: 50px;
 
+}
+
+.swi_img {
+    display: block;         
+    margin: 40px auto;     
+    padding: 10px;          
+    width: auto;        
+    height: 600px;           
 }
 
 #login{
